# reg

./: .gitignore  Cargo.toml  DATAMODEL.md  DESIGN.md  LICENSE  Pipfile  README.md  accepts.txt  compile_materialize.sh  deploy.sh  load_races_and_schools.py  manage.py  races.csv  rejects.txt  requirements.txt  schools.csv  zappa_settings.json  zappa_settings.json.bak
reg/: settings.py  urls.py  wsgi.py
registration/: models.py  views.py
registration/migrations/: 0001_initial.py
templates/: base.html  login.html
templates/com/: attr.html  autocomplete.html  card.html  cardform.html  file_field.html  form.html  select_field.html  select_multiple_field.html  text_field.html  textarea_field.html  title.html
templates/django_registration/: activation_complete.html  activation_email_body.txt  activation_email_subject.txt  activation_failed.html  registration_closed.html  registration_complete.html  registration_form.html
templates/emails/: admitted_email_contents.html  admitted_email_subject.txt  decision_email_contents.html  decision_email_subject.txt  email_blast_contents.html  email_blast_subject.txt  rejected_email_contents.html  waitlisted_email_contents.html
templates/in_app/: applicant_index.html  application.html  confirmation.html  memes.js  reviewer_index.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
theapplication/: accounts_urls.py  admin.py  apps.py  forms.py  models.py  settings.py  storage_backends.py  urls.py  views.py
(+158 files in other folders)
