[package]
name = "reg"
version = "0.1.0"
authors = ["Michael Noronha <michaeltnoronha@gmail.com>"]

[[bin]]
name = "regbin"
path = "src/bin/main.rs"

[lib]
name = "reglib"
path = "src/lib.rs"

[dependencies]
rocket = "0.3.13"
rocket_codegen = "0.3.13"
rocket_contrib = { version = "0.3.13", default-features = false, features = ["tera_templates"] }


diesel = { version = "1.0.0", features = ["postgres"]  }

r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.21"

tera = "0.11.8"

dotenv = "0.13.0"
